General | All DietPi scripts by default now use /tmp RAMFS to create, download and handle temporary files. By this we speed up especially installations and reduce disk I/O: https://github.com/Fourdee/DietPi/issues/1801
General | "fake-hwclock" is purged now on first run setup and v6.13 patch, if a real hardware clock is available.
Image | NanoPC-T4: Image updated which now includes custom kernel/modules created by @carlosedp. Adds CIFS, docker support and much more. Please note, WiFi scan is intermittent with this kernel, and, may take a few attempts to be successful, however, we believe the additional modules are a higher priority: https://github.com/Fourdee/DietPi/issues/1829

Bug Fixes:
DietPi-Drive_Manager | Resolved an issue where mounting drives with the non-default path, would not re-select the same drive on the next screen.
DietPi-Globals | G_THREAD_WAIT: Resolved an issue with 'G_THREAD_COUNT' not being re-init after all threads have finished, causing future threads to have NULL index: https://github.com/Fourdee/DietPi/issues/1801#issuecomment-406681129
DietPi-Process_Tool | Resolved an issue where values were only being applied to the parent process, and, not all child threads. Many thanks to @antonellocaroli for reporting this issue: https://github.com/Fourdee/DietPi/issues/1942
DietPi-Software | WiringPi: Resolved failed installation with RPi.
DietPi-Software | Sonarr: Fixed APT install due to HTTPS error. Reverted to HTTP as of official install instructions. Thanks for report @GulyFMG: https://github.com/Fourdee/DietPi/issues/1953
DietPi-Software | qBitTorrent: Resolved an issue with inability to save webUI settings: https://github.com/Fourdee/DietPi/issues/1957
DietPi-Survey | Resolved an issue where a failed connection test would generate an error with UI blocking. As this program is not critical to device operation, the error is now silent without UI blocking: https://github.com/Fourdee/DietPi/issues/1968#issuecomment-408615457