@@ -59,6 +59,9 @@ AUTO_SETUP_SWAPFILE_SIZE=1
 #		Optional swapfile location
 AUTO_SETUP_SWAPFILE_LOCATION=/var/swap
 
+# Unmask (enable) systemd-logind service, which is masked by default on DietPi 
+AUTO_UNMASK_LOGIND=0
+
 ##### Software Automation Options #####
 
 #	Fully automate installation
