@@ -16132,6 +16132,17 @@ _EOF_
 		# Start installations for software
 		Run_Installations
 
+		# Unmask systemd-logind if set in dietpi.txt or libpam-systemd was installed
+		if [[ $(readlink /etc/systemd/system/systemd-logind.service) == '/dev/null' ]] &&
+			{ grep -q '^[[:blank:]]*AUTO_UNMASK_LOGIND=1' /DietPi/dietpi.txt ||
+			dpkg-query -s 'libpam-systemd' &> /dev/null; }; then
+
+			G_RUN_CMD systemctl unmask systemd-logind
+			systemctl enable systemd-logind &> /dev/null
+			systemctl start systemd-logind &> /dev/null
+
+		fi
+
 		# Upload DietPi-Survey Data, if opted in, prompt user choice, if no settings file exists
 		/DietPi/dietpi/dietpi-survey 1
 
