@@ -1014,6 +1014,15 @@ _EOF_
 			# - qBitTorrent: https://github.com/Fourdee/DietPi/issues/1957
 			chown -R qbittorrent:dietpi /home/qbittorrent &> /dev/null
 			#-------------------------------------------------------------------------------
+			#Mask systemd-logind as new default, if libpam-systemd is not installed: https://github.com/Fourdee/DietPi/issues/1767
+			if dpkg-query -s 'libpam-systemd' &> /dev/null; then
+
+				systemctl stop systemd-logind &> /dev/null
+				systemctl disable systemd-logind &> /dev/null
+				systemctl mask systemd-logind
+
+			fi
+			#-------------------------------------------------------------------------------
 			# - Disable cron.minutely, if unused to reduce cron executions and logs
 			(( $(find /etc/cron.minutely/ | wc -l) > 2 )) || sed -i '\|cron\.minutely|s|^\*/[0-9]*[[:blank:]]|#*/0 |' /etc/crontab
 			#-------------------------------------------------------------------------------
