@@ -13,6 +13,7 @@ DietPi-Software | Mono: Now installs 'mono-complete' by default, required for Mo
 DietPi-Software | Lidarr: Now available for installation, automatically download music: https://github.com/Fourdee/DietPi/issues/1874
 DietPi-Cron | /etc/cron.minutely/ is now disabled by default, to reduce cron executions and logs. This is also patched with v6.13, if no script is placed within the folder. Use "dietpi-cron" to enable and configure this feature.
 General | All DietPi scripts by default now use /tmp RAMFS to create, download and handle temporary files. By this we speed up especially installations and reduce disk I/O: https://github.com/Fourdee/DietPi/issues/1801
+General | By default systemd-logind is now masked on DietPi images. This can be changed by setting AUTO_UNMASK_LOGIND=1 within dietpi.txt. As well it will be unmasked automatically, if libpam-systemd was installed during dietpi-software installation: https://github.com/Fourdee/DietPi/issues/1767
 General | "fake-hwclock" is purged now on first run setup and v6.13 patch, if a real hardware clock is available.
 Image | NanoPC-T4: Image updated which now includes custom kernel/modules created by @carlosedp. Adds CIFS, docker support and much more. Please note, WiFi scan is intermittent with this kernel, and, may take a few attempts to be successful, however, we believe the additional modules are a higher priority: https://github.com/Fourdee/DietPi/issues/1829
 
